# Torrential-Remote

./: CODE_OF_CONDUCT.md  README.md  debian  meson.build
data/: com.github.popvladaurel.torrential-remote.appdata.xml  com.github.popvladaurel.torrential-remote.appdata.xml.in  com.github.popvladaurel.torrential-remote.desktop  com.github.popvladaurel.torrential-remote.desktop.in  gschema.xml  meson.build
debian/: changelog  control  copyright
meson/: meson.build  post_install.py
po/: POTFILES  com.github.popvladaurel.torrential-remote.pot  ro.po
src/: Application.vala  Main.vala  TorrentialRemote.vala  meson.build
src/Client/: Model.vala  View.vala
src/Controllers/: Server.vala
src/Enums/: Statuses.vala
src/Main/: HeaderBar.vala  Torrents.vala  Window.vala
src/Models/: Client.vala  Server.vala  Torrent.vala
src/Server/: Controller.vala  Dialog.vala  Item.vala  Model.vala  View.vala
src/Torrent/: Controller.vala  Model.vala  Row.vala  Statuses.vala  View.vala
src/Transmission/: Transmission.vala
src/Widgets/: AddServerDialog.vala  Connection.vala  HeaderBar.vala  Torrent.vala  TorrentRow.vala  Torrents.vala  Welcome.vala  Window.vala
